--- a/index.html
+++ b/index.html
@@ -15,13 +15,19 @@
     <li><a href="./Maps/Aitoff.png"></a>Aitoff Projection</li>
     <img src="./Maps/Aitoff.png" alt="">
     <li><a href="./Maps/3857.png"></a>Pseudo Mercator Projection</li>
-    <img src="" alt="">
+    <img src="./Maps/3857.png" alt="">
     <li><a href="./Maps/53018.png"></a>Winkel Triple Projection</li>
+    <img src="./Maps/53018.png" alt="">
     <li><a href="./Maps/54034.png"></a>Cylindrical Equal Area Projection</li>
+    <img src="./Maps/54034.png" alt="">
     <li><a href="./Maps/54027.png"></a>Equidistant Conic Projection</li>
+    <img src="./Maps/54027.png" alt="">
     <li><a href="./Maps/102016.png"></a>North Pole Azimuthal Equidistant Projection</li>
+    <img src="./Maps/102016.png" alt="">
     <li><a href="./Maps/54024.png"></a>Bonne Projection</li>
+    <img src="./Maps/54024.png" alt="">
     <li><a href="./Maps/53029.png"></a>Van der Grinten Projection</li>
+    <img src="./Maps/53029.png" alt="">
 
 
 </body>
