--- a/index.html
+++ b/index.html
@@ -8,26 +8,32 @@
 </head>
 <body>
     <h1>World Projections</h1>
-    <h2>Description of how I displayed different projections</h2>
+    <h2>Using QGIS, I was able to take a natural earth shapefile, and save different 
+        maps by changing the EPSG projections. Using the Indicatrix Plugin, it 
+        added a layer to see how distortion affects each projection. Indicatrix 
+        displays Tissot circles, tracking the change that affects either shape, 
+        distance, direction, etc. </h2>
     <h2>Map Projections</h2>
     <li><a href="./Maps/WGS84.png"></a>WGS84 Projection</li>
-    <img src="./Maps/WGS84.png" width="400" height="400">
+    <img src="./Maps/WGS84.png" width="700" height="600">
     <li><a href="./Maps/Aitoff.png"></a>Aitoff Projection</li>
-    <img src="./Maps/Aitoff.png" width="400" height="400">
+    <img src="./Maps/Aitoff.png" width="700" height="600">
     <li><a href="./Maps/3857.png"></a>Pseudo Mercator Projection</li>
-    <img src="./Maps/3857.png" width="400" height="400">
+    <img src="./Maps/3857.png" width="700" height="600">
     <li><a href="./Maps/53018.png"></a>Winkel Triple Projection</li>
-    <img src="./Maps/53018.png" width="400" height="400">
+    <img src="./Maps/53018.png" width="700" height="600">
     <li><a href="./Maps/54034.png"></a>Cylindrical Equal Area Projection</li>
-    <img src="./Maps/54034.png" width="400" height="400">
+    <img src="./Maps/54034.png" width="700" height="600">
     <li><a href="./Maps/54027.png"></a>Equidistant Conic Projection</li>
-    <img src="./Maps/54027.png" width="400" height="400">
+    <img src="./Maps/54027.png" width="700" height="600">
     <li><a href="./Maps/102016.png"></a>North Pole Azimuthal Equidistant Projection</li>
-    <img src="./Maps/102016.png" width="400" height="400">
+    <img src="./Maps/102016.png" width="700" height="600">
     <li><a href="./Maps/54024.png"></a>Bonne Projection</li>
-    <img src="./Maps/54024.png" width="400" height="400">
+    <img src="./Maps/54024.png" width="700" height="600">
     <li><a href="./Maps/53029.png"></a>Van der Grinten Projection</li>
-    <img src="./Maps/53029.png" width="400" height="400">
+    <img src="./Maps/53029.png" width="700" height="600">
+
+
 
 
 </body>
