--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         distance, direction, etc. </h2>
     <h2>Map Projections</h2>
     <li><a href="./Maps/WGS84.png"></a>WGS84 Projection</li>
+    <caption>Observations: In the WGS84 projection, shape and direction are well 
+        preserved. However, the size of countries further from the equator are 
+        larger and stretched horizontally. </caption>
     <img src="./Maps/WGS84.png" width="700" height="600">
     <li><a href="./Maps/Aitoff.png"></a>Aitoff Projection</li>
     <img src="./Maps/Aitoff.png" width="700" height="600">
