--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         larger and stretched horizontally. </caption>
     <img src="./Maps/WGS84.png" width="700" height="600">
     <li><a href="./Maps/Aitoff.png"></a>Aitoff Projection</li>
+    <caption>Observations: The Aitoff projection bends the latitude and 
+        longitude, which preserves the globe sense of the map. However, there 
+        is distortion of shape and area on the outskirts of the map, which in 
+        turn affects direction in this projection. </caption>
     <img src="./Maps/Aitoff.png" width="700" height="600">
     <li><a href="./Maps/3857.png"></a>Pseudo Mercator Projection</li>
     <img src="./Maps/3857.png" width="700" height="600">
