--- a/index.html
+++ b/index.html
@@ -26,8 +26,14 @@
         turn affects direction in this projection. </caption>
     <img src="./Maps/Aitoff.png" width="700" height="600">
     <li><a href="./Maps/3857.png"></a>Pseudo Mercator Projection</li>
+    <caption>Observations: The Pseudo Mercator projection has similar problems 
+        as WGS84. Latitude and Longitude are kept straight, but latitude distances
+        begin to vary towards the poles, causing countries close to the 
+        polls to become very distorted in size. Otherwise, shape and direction are 
+        fairly well preserved. </caption>
     <img src="./Maps/3857.png" width="700" height="600">
     <li><a href="./Maps/53018.png"></a>Winkel Triple Projection</li>
+    <caption>Observations: </caption>
     <img src="./Maps/53018.png" width="700" height="600">
     <li><a href="./Maps/54034.png"></a>Cylindrical Equal Area Projection</li>
     <img src="./Maps/54034.png" width="700" height="600">
