--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
     <li><a href="./Maps/3857.png"></a>Pseudo Mercator Projection</li>
     <caption>Observations: The Pseudo Mercator projection has similar problems 
         as WGS84. Latitude and Longitude are kept straight, but latitude distances
-        begin to vary towards the poles, causing countries close to the 
-        polls to become very distorted in size. Otherwise, shape and direction are 
-        fairly well preserved. </caption>
+        begin to vary towards the poles,</caption>
+        <caption> causing countries close to the 
+            polls to become very distorted in size. Otherwise, shape and direction are 
+            fairly well preserved. </caption>
     <img src="./Maps/3857.png" width="700" height="600">
     <li><a href="./Maps/53018.png"></a>Winkel Triple Projection</li>
     <caption>Observations: </caption>
