--- a/index.html
+++ b/index.html
@@ -36,9 +36,16 @@
     <img src="./Maps/3857.png" width="700" height="600">
     
     <li><a href="./Maps/53018.png"></a>Winkel Triple Projection</li>
-    <caption>Observations: </caption>
+    <caption>Observations: The Winkel Triple combines bending longitude lines 
+        with flat latitude lines, allowing for the size and shape of countries to 
+        be relatively accurate, though area, distance, and direction become compromised.</caption>
     <img src="./Maps/53018.png" width="700" height="600">
     <li><a href="./Maps/54034.png"></a>Cylindrical Equal Area Projection</li>
+    <caption>Observations: While size and shape near the equator as well as area are well maintained
+         in this projection, the distortion of shape near the poles is very prominent. 
+         Direction and distance follow a similar problem: maintained at the equator, not so much
+         near the poles. 
+    </caption>
     <img src="./Maps/54034.png" width="700" height="600">
     <li><a href="./Maps/54027.png"></a>Equidistant Conic Projection</li>
     <img src="./Maps/54027.png" width="700" height="600">
