--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HW 3: World Projections</title>
+<link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
     <h1>World Projections</h1>
@@ -48,8 +49,15 @@
     </caption>
     <img src="./Maps/54034.png" width="700" height="600">
     <li><a href="./Maps/54027.png"></a>Equidistant Conic Projection</li>
+    <caption>Observations: This projection helps prevent distortion at the poles, which many other 
+        projections fail to do. However, it does a poor job projecting the entire world map, as the
+        further from the pole one looks, the wider shape becomes. Therefore, area and direction are 
+        pretty accurate, but shape and distance become very distorted. As well, the map breaks, so 
+        there lacks continuation in the circular shape.
+    </caption>
     <img src="./Maps/54027.png" width="700" height="600">
     <li><a href="./Maps/102016.png"></a>North Pole Azimuthal Equidistant Projection</li>
+    <caption>Observations: </caption>
     <img src="./Maps/102016.png" width="700" height="600">
     <li><a href="./Maps/54024.png"></a>Bonne Projection</li>
     <img src="./Maps/54024.png" width="700" height="600">
