--- a/worldprojections.html
+++ b/worldprojections.html
@@ -12,13 +12,13 @@
     
     <h2>WGS84 Projection</h2>
     <h3>Observations: In the WGS84 projection, shape and direction are well preserved. However, the size of countries further from the equator are larger and stretched horizontally. </h3>
-    <a href=".//maps/4326.png">
-    <img src=".//maps/4326.png" alt="WGS84" width='500px'>
+    <a href="./Maps/WGS84.png">
+    <img src="./Maps/WGS84.png" alt="WGS84" width='500px'>
     </a>
     <h2>Aitoff Projection</h2>
     <h3>Observations: The Aitoff projection bends the latitude and longitude, which preserves the globe sense of the map. However, there is distortion of shape and area on the outskirts of the map, which in turn affects direction in this projection.</h3>
-    <a href=".//maps/54043.png">
-    <img src=".//maps/54043.png" alt="Aitoff" width='500px'>
+    <a href="./Maps/Aitoff.png">
+    <img src="./Maps/Aitoff.png" alt="Aitoff" width='500px'>
     </a>
     <h2>Pseudo Mercator Projection</h2>
     <h3>Observations: The Pseudo Mercator projection has similar problems as WGS84. Latitude and Longitude are kept straight, but latitude distances begin to vary towards the poles, causing countries close to the polls to become very distorted in size. Otherwise, shape and direction are well preserved. </h3>
