--- a/worldprojections.html
+++ b/worldprojections.html
@@ -8,7 +8,7 @@
 <body>
     <h1>In this project I learned how to display images in different projections</h1>
     
-    <h2 style="color:red">Using QGIS, I was able to take a natural earth shapefile, and save different maps by changing the EPSG projections. Using the Indicatrix Plugin, it added a layer to see how distortion affects each projection. Indicatrix displays Tissot circles, tracking the change that affects either shape, distance, direction, etc.</p>
+    <h2 style="color:red">Using QGIS, I was able to take a natural earth shapefile, and export different maps by changing the EPSG projections. Using the Indicatrix Plugin, it added a layer to see how distortion affects each projection. Indicatrix displays Tissot circles, tracking the change that affects either shape, distance, direction, etc.</p>
     
     <h2>WGS84 Projection</h2>
     <h3>Observations: In the WGS84 projection, shape and direction are well preserved. However, the size of countries further from the equator are larger and stretched horizontally. </h3>
