--- a/worldprojections.html
+++ b/worldprojections.html
@@ -16,7 +16,7 @@
     <img src="./Maps/WGS84.png" alt="WGS84" width='500px'>
     </a>
     <h2>Aitoff Projection</h2>
-    <h3>Observations: The Aitoff projection bends the latitude and longitude, which preserves the globe sense of the map. However, there is distortion of shape and area on the outskirts of the map, which in turn affects direction in this projection.</h3>
+    <h3>Observations: The Aitoff projection bends the latitude and longitude, preserving shape at the center of the map. However, there is distortion of shape, area and distance on the outskirts of the map.This is caused by the growing distance between bending latitude and longitude lines.</h3>
     <a href="./Maps/Aitoff.png">
     <img src="./Maps/Aitoff.png" alt="Aitoff" width='500px'>
     </a>
