--- a/worldprojections.html
+++ b/worldprojections.html
@@ -26,12 +26,12 @@
     <img src="./Maps/3857.png" alt="Pseudo Mercator" width='500px'>
     </a>
     <h2>Winkel Triple Projection</h2>
-    <h3>Observations: The Winkel Triple combines bending longitude lines with flat latitude lines, allowing for the size and shape of countries to be relatively accurate, though area, distance, and direction become compromised. </h3>
+    <h3>Observations: The Winkel Triple combines bending longitude lines with flat latitude lines, allowing for the size, shape, and area of countries to be relatively accurate, though distance becomes compromised. </h3>
     <a href="./Maps/53018.png">
     <img src="./Maps/53018.png" alt="Winkel Triple" width='500px'>
     </a>
     <h2>Cylindrical Equal Area Projection</h2>
-    <h3>Observations: While size and shape near the equator as well as area are well maintained in this projection, the distortion of shape near the poles is very prominent. Direction and distance follow a similar problem: maintained at the equator, not so much near the poles. </h3>
+    <h3>Observations: Latitude and longitude are equidistant of eachother. While size, shape, and area near the equator are well maintained in this projection, the distortion of shape near the poles is very prominent. Direction and distance follow a similar problem: maintained at the equator, not so much near the poles. </h3>
     <a href="./Maps/54034.png">
     <img src="./Maps/54034.png" alt="Cylindrical Equal Area Projection" width='500px'>
     </a>
